--- a/9364A-G6/src/links/midterms.html
+++ b/9364A-G6/src/links/midterms.html
@@ -470,14 +470,14 @@
                                     <li>Example:</li>
                                     <ul>
                                         <li>-webkit-</li> 
-										<div class = "code-sample">
-										<span class = "comment">/*safari is backed by a rendering engine to draw the HTML/CSS web page with webkit*/</span><br>
-										<span class = "indent"></span>width: 100px;<br>
-										<span class = "indent"></span>height: 100px;<br>
-										<span class = "indent"></span>background: red;<br>
-										<span class = "indent"></span>-webkit-transition: width 2s; /* Safari */<br>
-										<span class = "indent"></span>transition: width 2s;<br>}
-										</div>
+						<div class = "code-sample">
+						<span class = "comment">/*safari is backed by a rendering engine to draw the HTML/CSS web page with webkit*/</span><br>
+						<span class = "indent"></span>width: 100px;<br>
+						<span class = "indent"></span>height: 100px;<br>
+						<span class = "indent"></span>background: red;<br>
+						<span class = "indent"></span>-webkit-transition: width 2s; /* Safari */<br>
+						<span class = "indent"></span>transition: width 2s;<br>}
+						</div>
                                         <li>-moz-</li> <!--Provide Example -->
                                         <li>-o-</li> <!--Provide Example -->
                                         <li>-ms-</li> <!--Provide Example -->
@@ -557,11 +557,23 @@
                                         </ul>
                                         <li>RGB functions</li>
                                         <ul>
-                                            <!--Provide Example -->
+                                        <div class = "code-sample">
+                                    	<span class = "comment">/*An RGB color value is specified with: rgb(red, green, blue).*/</span><br>
+					div { <br>
+                                    	<span class = "indent"></span>background-color: rgb(0, 191, 255);<br>
+    					<span class = "indent"></span>color: rgb(255, 255, 255);<br>
+					<span class = "indent"></span>}<br>}
+                                	</div>
                                         </ul>
                                         <li>HSL functions</li>
                                         <ul>
-                                            <!--Provide Example -->
+                                        <div class = "code-sample">
+                                    	<span class = "comment">/*The hsl() function accepts the HSL value as a parameter*/</span><br>
+					body { <br>
+                                    	<span class = "indent"></span>color: hsl(30, 100%, 50%);<br>
+    					<span class = "indent"></span>background-color: hsl(120, 100%, 50%);<br>
+					<span class = "indent"></span>}<br>}
+                                	</div>
                                         </ul>
                                         <li>currentcolor, transparent</li>
                                     </ul>
