made sligh modifications

--- a/9364A-G6/src/links/midterms.html
+++ b/9364A-G6/src/links/midterms.html
@@ -613,8 +613,8 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>The LiveScript language was designed at Netscape Communications to make the Java support in Netscape Navigator more accessible to non-Java programmers. LiveScript, like any scripting language, is a loosely-typed language. It is intended for a large audience of Web designers and developers.</li>
-                            <li>In December 1995, LiveScript was renamed JavaScript and released as part of Netscape Navigator 2.0. Except for marketing purposes, JavaScript has nothing to do with the Java language developed and maintained by Sun Microsystems. The Web community started then to manipulate the content of Web documents, in order to bring interactivity and typography to the formerly static Web.</li>
+                            <li>The LiveScript language was designed at <strong>Netscape Communications</strong> to make the Java support in Netscape Navigator more accessible to non-Java programmers. LiveScript, like any scripting language, is a loosely-typed language. It is intended for a large audience of Web designers and developers.</li>
+                            <li>In <strong>December 1995</strong>, LiveScript was renamed <em><strong>JavaScript</strong></em> and released as part of Netscape Navigator 2.0. Except for marketing purposes, JavaScript has nothing to do with the Java language developed and maintained by Sun Microsystems. The Web community started then to manipulate the content of Web documents, in order to bring interactivity and typography to the formerly static Web.</li>
                             <li><strong>Developer:</strong> Netscape Communications Corporation, Mozilla Foundation, Ecma International</li>
                         </ul>
                         <h3>ECMAScript Editions</h3>
