--- a/9364A-G6/src/links/prelims.html
+++ b/9364A-G6/src/links/prelims.html
@@ -4,6 +4,7 @@
         <title>WebTech2018</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="../favicon2.ico" type="image/x-icon" />
 
         <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet'>
         <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,12 +14,12 @@
     </head>
 
     <body>
-        <script type="text/javascript" src="js/script.js"></script>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/tether.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../js/script.js"></script>
+        <script src="../js/jquery.min.js"></script>
+        <script src="../js/tether.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
 
-        <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary fixed-top">
+        <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary sticky-top">
             <a href="../index.html" class="navbar-brand font-weight-bold logo-color" id="logo">WEBTEK 2018</a>
 
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
