--- a/9364A-G6/src/index.html
+++ b/9364A-G6/src/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="favicon2.ico" type="image/x-icon" />
-        
+
         <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet'>
         <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -18,21 +18,7 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/tether.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <div>
-            <div class="jumbotron" style="margin-bottom: 0px;">
-                <div class="row">
-                    <div class="xs col-md-12 col-sm-12 col-lg-6 pt-sm-5 pt-lg-5 pb-lg-5 pl-lg-5">
-                        <h1 class="text-uppercase font-weight-bold text-center text-lg-left">Web Technologies and Applications</h1>
-                        <h4 class="text-center text-lg-left">AY 2017-2018 Second Semester</h4>
-                    </div>
-                    <div class="col-md-12 col-sm-12 col-lg-6 text-center">
-                        <img src="img/164.png" class="heading1-img mt-5 mt-md-0">
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <nav class="navbar navbar-light navbar-toggleable-md bg-primary-home fixed-top">
+        <nav class="navbar navbar-light navbar-toggleable-md bg-primary-home sticky-top">
             <a href="index.html" class=" font-weight-bold navbar-brand logo-color-home" id="logo">WEBTEK 2018</a>
 
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -52,6 +38,22 @@
                 </ul>
             </div>
         </nav>
+
+        <div>
+            <div class="jumbotron" style="margin-bottom: 0px;">
+                <div class="row">
+                    <div class="xs col-md-12 col-sm-12 col-lg-6 pt-sm-5 pt-lg-5 pb-lg-5 pl-lg-5">
+                        <h1 class="text-uppercase font-weight-bold text-center text-lg-left">Web Technologies and Applications</h1>
+                        <h4 class="text-center text-lg-left">AY 2017-2018 Second Semester</h4>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-lg-6 text-center">
+                        <img src="img/164.png" class="heading1-img mt-5 mt-md-0">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
     </body>
 
