added the onClick functionality in some parts of JavaScript notes

--- a/9364A-G6/src/links/midterms.html
+++ b/9364A-G6/src/links/midterms.html
@@ -556,13 +556,17 @@
                                 </div>                                                                       
                             </ul>
                             <li>traverse the DOM tree (from a given node)</li>
-                            <ul>
-                                <li>firstChild,lastChild,nextSibling,previousSibling</li>
-                                <div class="code-sample">
+                            <ul>                    
+
+                                    
+                                    
+                                <span class="anchor" id="keyframes2"></span>                               
+                                <li><a href="#firstChild" onclick="toggle_visibility('firstChild');">firstChild</a>,<a href ="#lastChild" onclick="toggle_visibility('lastChild');">lastChild</a>,nextSibling,previousSibling</li>
+                                <div class="code-sample" id="firstChild">
                                     <span class="comment">// firstChild</span><br>
                                     var x ==document.getElementById("myList").firstChild.innerHTML;<br>
                                 </div>
-                                <div class="code-sample">
+                                <div class="code-sample" id="lastChild">
                                     <span class="comment">// lastChild</span><br>
                                     var x = document.getElementById("myList").lastChild.innerHTML;<br>        
                                 </div>
