--- a/9364A-G6/src/links/midterms.html
+++ b/9364A-G6/src/links/midterms.html
@@ -531,37 +531,42 @@
                         <ul>
                             <li>Retrieve references to nodes (or node collection)in the DOM</li>
                             <ul>
-                                <li>getElementById()</li>
-                                <div class="code-sample">
+                                <li><a href ="#getElementById()" onclick="toggle_visibility('getElementById()');">getElementById()</a></li>
+                                <div class="code-sample" id="getElementById()">
                                     <span class="comment">// getElementById()</span><br>
                                     var myElement = document.getElementById("Hello");<br>
                                 </div>
-                                <li>getElementsByTagName(), getElementsByClassName()</li>
-                                <div class="code-sample">
+                                <li><a href ="#getElementsByTagName()" onclick="toggle_visibility('getElementsByTagName()');">getElementsByTagName()</a>, 
+								<a href ="#getElementsByClassName()" onclick="toggle_visibility('getElementsByClassName()');">getElementsByClassName()</a>
+								</li>
+                                <div class="code-sample" id="getElementsByTagName()">
                                     <span class="comment">// getElementByTagName()</span><br>
                                     var x = document.getElementsByTagName("p");<br>
                                 </div>
-                                <div class="code-sample">
+                                <div class="code-sample" id="getElementsByClassName()">
                                     <span class="comment">// getElementByClassName()</span><br>
                                     var x = document.getElementsByClassName("intro");<br>                
                                 </div>                                                                     
-                                <li>querySelector(), querySelectorAll()</li>
-                                <div class="code-sample">
+                                <li><a href ="#querySelector()" onclick="toggle_visibility('querySelector()');">querySelector()</a>, 
+								<a href ="#querySelectorAll()" onclick="toggle_visibility('querySelectorAll()');">querySelectorAll()</a>
+								</li>
+                                <div class="code-sample" id="querySelector()">
                                     <span class="comment">// querySelector()</span><br>
                                     var x = document.querySelector("p.intro");<br>  
                                 </div>
-                                <div class="code-sample">
+                                <div class="code-sample" id="querySelectorAll()">
                                     <span class="comment">// querySelectorAll()</span><br>
                                     var x = document.querySelectorAll("p.intro");<br>
                                 </div>                                                                       
                             </ul>
                             <li>traverse the DOM tree (from a given node)</li>
-                            <ul>                    
-
-                                    
-                                    
+                            <ul>                     
                                 <span class="anchor" id="keyframes2"></span>                               
-                                <li><a href="#firstChild" onclick="toggle_visibility('firstChild');">firstChild</a>,<a href ="#lastChild" onclick="toggle_visibility('lastChild');">lastChild</a>,nextSibling,previousSibling</li>
+                                <li><a href="#firstChild" onclick="toggle_visibility('firstChild');">firstChild</a>,
+								<a href ="#lastChild" onclick="toggle_visibility('lastChild');">lastChild</a>,
+								<a href ="#nextSibling" onclick="toggle_visibility('nextSibling');">nextSibling</a>,
+								<a href ="#previousSibling" onclick="toggle_visibility('previousSibling');">previousSibling</a>
+								</li>
                                 <div class="code-sample" id="firstChild">
                                     <span class="comment">// firstChild</span><br>
                                     var x ==document.getElementById("myList").firstChild.innerHTML;<br>
@@ -570,58 +575,66 @@
                                     <span class="comment">// lastChild</span><br>
                                     var x = document.getElementById("myList").lastChild.innerHTML;<br>        
                                 </div>
-                                <div class="code-sample">
+                                <div class="code-sample" id="nextSibling">
                                     <span class="comment">// nextSibling</span><br>
                                     var x = document.getElementById("item1").nextSibling.innerHTML;<br>                                     
                                 </div>
-                                <div class="code-sample">
+                                <div class="code-sample" id="previousSibling">
                                     <span class="comment">// previousSibling</span><br>
                                    var x = document.getElementById("item2").previousSibling.innerHTML;<br>    
                                 </div>                                                                                                                                            
-                                <li>firstElementChild,lastElementChild,nextElementSibling,previousElementSibling</li>
-                                <div class="code-sample">
+                                <li><a href ="#firstElementChild" onclick="toggle_visibility('firstElementChild');">firstElementChild</a>,
+								<a href ="#lastElementChild" onclick="toggle_visibility('lastElementChild');">lastElementChild</a>,
+								<a href ="#nextElementSibling" onclick="toggle_visibility('nextElementSibling');">nextElementSibling,</a>
+								<a href ="#previousElementSibling" onclick="toggle_visibility('previousElementSibling');">previousElementSibling</a>
+								</li>
+                                <div class="code-sample" id="firstElementChild"
                                     <span class="comment">// firstElementChild</span><br>
                                    var x = document.getElementById("myList").firstElementChild.innerHTML;<br>                                     
                                 </div>  
-                                <div class="code-sample">
+                                <div class="code-sample" id="lastElementChild">
                                     <span class="comment">// lastElementChild</span><br>
                                     var x = document.getElementById("myList").lastElementChild.innerHTML;<br>                                     
                                 </div>  
-                                <div class="code-sample">
+                                <div class="code-sample" id="nextElementSibling">
                                     <span class="comment">// nextElementSibling</span><br>
                                     var x = document.getElementById("item1").nextElementSibling.innerHTML;<br>                                     
                                 </div>  
-                                <div class="code-sample">
+                                <div class="code-sample" id="previousElementSibling">
                                     <span class="comment">// previousElementSibling</span><br>
                                     <span class="indent">var x = document.getElementById("item2").previousElementSibling<br>.innerHTML;</span><br>                                     
                                 </div>                                                                                                                                              
                             </ul>
                             <li>construct/copy nodes</li>
                             <ul>
-                                <li>createElement(),createTextNode(),createAttribute(), etc</li>
-                                <div class="code-sample" id="s">
+                                <li><a href ="#createElement()" onclick="toggle_visibility('createElement()');">createElement()</a>,
+								<a href ="#createTextNode()" onclick="toggle_visibility('createTextNode()');">createTextNode()</a>,
+								<a href ="#createAttribute()" onclick="toggle_visibility('createAttribute()');">createAttribute()</a>, etc</li>
+                                <div class="code-sample" id="createElement()">
                                     <span class="comment">// createElement()</span><br>
                                     var btn = document.createElement("BUTTON");<br>                                     
                                 </div>  
-                                <div class="code-sample">
+                                <div class="code-sample" id="createTextNode()">
                                     <span class="comment">// createTextNode()</span><br>
                                     var t = document.createTextNode("Hello World");<br>                                     
                                 </div>  
-                                <div class="code-sample">
+                                <div class="code-sample" id="createAttribute()">
                                     <span class="comment">// createAttribute()</span><br>
                                     var att = document.createAttribute("attrib");<br>                                     
                                 </div>  
 
-                                <li><a onclick="myFunction()">cloneNode()</a>,importNode()</li>                                                              
+                                <li><a href ="#cloneNode()" onclick="toggle_visibility('cloneNode()');">cloneNode()</a>,
+								<a href ="#importNode()" onclick="toggle_visibility('importNode()');">importNode()</a>
+								</li>                                                              
 
-                                <div class ="code-sample" >
+                                <div class ="code-sample" id="cloneNode()">
                                     <span class="comment">// cloneNode()</span><br>
                                     var itm = document.getElementById("myList2").lastChild;<br>
                                     var cln = itm.cloneNode(true);
                                 </div>
 
 
-                                <div class="code-sample" id="s">
+                                <div class="code-sample" id="importNode()">
                                     <span class="comment">// importNode()</span><br>
                                     var newNode = document.importNode(oldNode, true);<br>
                                 </div>                                                            
