added the quizes for CSS and JScript

--- a/9364A-G6/src/index.html
+++ b/9364A-G6/src/index.html
@@ -13,7 +13,7 @@
 
     </head>
 
-    <body class="">
+    <body class="home">
         <script type="text/javascript" src="js/script.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="js/tether.min.js"></script>
@@ -40,14 +40,14 @@
         </nav>
 
         <div>
-            <div class="jumbotron" style="margin-bottom: 0px;">
+            <div class="jumbotron">
                 <div class="row">
                     <div class="xs col-md-12 col-sm-12 col-lg-6 pt-sm-5 pt-lg-5 pb-lg-5 pl-lg-5">
                         <h1 class="text-uppercase font-weight-bold text-center text-lg-left">Web Technologies and Applications</h1>
                         <h4 class="text-center text-lg-left">AY 2017-2018 Second Semester</h4>
                     </div>
                     <div class="col-md-12 col-sm-12 col-lg-6 text-center">
-                        <img src="img/164.png" class="heading1-img mt-5 mt-md-0">
+                        <img src="img/landing.png" class="heading1-img mt-5 mt-md-0">
                     </div>
                 </div>
             </div>
