fixed links in prelims.html

--- a/9364A-G6/website/links/prelims.html
+++ b/9364A-G6/website/links/prelims.html
@@ -48,11 +48,11 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 col-sm-12">
-                    <span class="anchor" id="www"></span>
                     <div class="link">
-                        <h1>World Wide Web</h1>
+                        <a href="#www2" onclick="toggle_visibility('www');"><h1>World Wide Web</h1></a>
                     </div>
-                    <div class="cont">
+                    <span class="anchor" id="www2"></span>
+                    <div class="cont" id="www">
                         <ul>
                             <li>Collection of web resources and applications: applications that can make us access web resources by the use of the internet.</li>
                             <li>Developed by Sir Tim Berners Lee in 1989</li>
@@ -81,11 +81,11 @@
                             </ul>
                         </ul>
                     </div>
-                    <span class="anchor" id="http"></span>
                     <div class="link">
-                        <h1>HyperText Transfer Protocol</h1>
+                        <a href="#http2" onclick="toggle_visibility('http');"><h1>HyperText Trasfer Protocol</h1></a>
                     </div>
-                    <div class="cont">
+                    <span class="anchor" id="http2"></span>
+                    <div class="cont" id="http">
                         <ul>
                             <li>Application layer communications protocol used to access resources on the WWW</li>
                             <li>Invented by Tim Berners - Lee of CERN in 1989</li>
