--- a/9364A-G6/website/links/midterms.html
+++ b/9364A-G6/website/links/midterms.html
@@ -655,6 +655,8 @@
                             <a href="mid_css_quiz.html">Take the quiz!</a>
                         </div>
                     </div>
+
+
                     <div class="link">
                         <a href="#js2" onclick="toggle_visibility('js');"><h1>JavaScript</h1></a>
                     </div>
@@ -847,6 +849,23 @@
                                 <li>ownerDocument,documentElement</li>
                                 <li>normalize()</li>
                             </ul>
+                        </ul>
+                        <h3>JSON</h3>
+                        <ul>
+                            <li>stands for JavaScript Object Notation</li>
+                            <li>a textfile with the .json file extension which is used for sharing data.</li>
+                            <li>it is derived from JavaScript, and is available for use in other languages such as, Python, PHP, Java, and Ruby</li>
+                            <li>it is pronounced like the name "Jason".</li>
+                            <li><a href="#jsonsamp2" onclick="toggle_visibility('jsonsamp');">A JSON object looks like this...</a></li>
+
+                            <span class="anchor" id="jsonsamp2"></span> 
+                            <div class="code-sample" id="jsonsamp">
+                                {<br>
+                                <span class="indent"></span>"name" : "Juan",<br>
+                                <span class="indent"></span>"age" : "20"<br>
+                                }
+                            </div>
+                                <p>JSON contents are set inside curly brackets ({ }), and data are defined in key-value pairs ("key" : "value"). every key and value should be enclosed in double quotation marks.</p>
 
                         </ul>
                         <div class="quiz">
